--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                 </div>
             </div>
 
+            <div class="col-12 col-md-6 col-lg-3 mb-3">
+              <a href="car-game.html"><img class="car-game-img" src="car-game.png" alt="Car Game"></a>
+            </div>
+
         </div>
     </div>
 
