--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-3 mb-3">
-              <a href="car-game.html"><img class="car-game-img" src="car-game.png" alt="Car Game"></a>
+              <a href="car-game.html"><img class="game-img" src="car-game.png" alt="Car Game"></a>
             </div>
 
         </div>
