--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
               <a href="car-game.html"><img class="game-img" src="car-game.png" alt="Car Game"></a>
             </div>
 
+            <div class="col-12 col-md-6 col-lg-3 mb-3">
+              <a href="zombie-game.html"><img class="game-img" src="zombie-game.png" alt="Car Game"></a>
+            </div>
+
         </div>
     </div>
 
