--- a/index.html
+++ b/index.html
@@ -115,21 +115,6 @@
 
                         <p class="fw-bold mb-1">$24.99</p>
                         <p id="stock-chakraWater" class="text-muted small mb-3"></p>
-
-                        <!-- Quantity + buttons -->
-                        <div class="btn-group mt-auto" role="group"
-                            aria-label="Chakra Water quantity controls"
-                            data-product-id="chakraWater">
-                            <button title="Remove Item" type="button" class="btn btn-outline-danger btn-cart-minus">
-                                <i class="bi bi-cart-dash"></i>
-                            </button>
-                            <button id="qty-chakraWater" type="button" class="btn btn-outline-secondary" disabled>
-                                0
-                            </button>
-                            <button title="Add Item" type="button" class="btn btn-outline-success btn-cart-plus">
-                                <i class="bi bi-cart-plus"></i>
-                            </button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -150,31 +135,84 @@
 
                         <p class="fw-bold mb-1">$12.99</p>
                         <p id="stock-protectionCandle" class="text-muted small mb-3"></p>
-
-                        <!-- Quantity + buttons -->
-                        <div class="btn-group mt-auto" role="group"
-                            aria-label="Protection Candle quantity controls"
-                            data-product-id="protectionCandle">
-                            <button title="Remove Item" type="button" class="btn btn-outline-danger btn-cart-minus">
-                                <i class="bi bi-cart-dash"></i>
-                            </button>
-                            <button id="qty-protectionCandle" type="button" class="btn btn-outline-secondary" disabled>
-                                0
-                            </button>
-                            <button title="Add Item" type="button" class="btn btn-outline-success btn-cart-plus">
-                                <i class="bi bi-cart-plus"></i>
-                            </button>
-                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="col-12 col-md-6 col-lg-3 mb-3">
-              <a href="car-game.html"><img class="game-img" src="car-game.png" alt="Car Game"></a>
+                <div class="card h-100 shadow-sm">
+                    <!-- Product image -->
+                    <a href="protection-candle.html">
+                        <img src="protection-candle-img.png" class="item-img card-img-top" alt="Chakra Water">
+                    </a>
+
+                    <!-- Product body -->
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title mb-1">Protection Candle</h5>
+
+                        <p class="text-muted mb-2">Hand-poured protection spell candle.</p>
+
+                        <p class="fw-bold mb-1">$12.99</p>
+                        <p id="stock-protectionCandle" class="text-muted small mb-3"></p>
+                    </div>
+                </div>
             </div>
 
             <div class="col-12 col-md-6 col-lg-3 mb-3">
-              <a href="zombie-game.html"><img class="game-img" src="zombie-game.png" alt="Car Game"></a>
+                <div class="card h-100 shadow-sm">
+                    <!-- Product image -->
+                    <a href="protection-candle.html">
+                        <img src="protection-candle-img.png" class="item-img card-img-top" alt="Chakra Water">
+                    </a>
+
+                    <!-- Product body -->
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title mb-1">Protection Candle</h5>
+
+                        <p class="text-muted mb-2">Hand-poured protection spell candle.</p>
+
+                        <p class="fw-bold mb-1">$12.99</p>
+                        <p id="stock-protectionCandle" class="text-muted small mb-3"></p>
+                      </div>
+                    </div>
+              </div>
+
+            <div class="col-12 col-md-3 mb-3">
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+          
+                  <div class="carousel-item active">
+                    <div class="card">
+                      <div class="row g-0">
+                        <div class="col-12">
+                          <a href="car-game.html"><img class="game-img" src="car-game.png" alt="Car Game"></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="carousel-item">
+                    <div class="card">
+                      <div class="row g-0">
+                        <div class="col-12">
+                          <a href="zombie-game.html"><img class="game-img" src="zombie-game.png" alt="Car Game"></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="carousel-item">
+                    <div class="card">
+                      <div class="row g-0">
+                        <div class="col-12">
+                          <a href="last-credit-game.html"><img class="game-img" src="last-credit.png" alt="Horror Game"></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
             </div>
 
         </div>
